Update Digital Christmas Tree.html

--- a/Digital Christmas Tree/Digital Christmas Tree.html
+++ b/Digital Christmas Tree/Digital Christmas Tree.html
@@ -35,7 +35,7 @@
              <img src="img/star-ornoment.png" alt="christmas-star" id="star1">  
             </a>
         <!-- </div> -->
-
+              <!--My is a hoe-->
       </div>
         
       </div>
