Add 2 more pics and add first purple ornament

--- a/Digital Christmas Tree/Digital Christmas Tree.html
+++ b/Digital Christmas Tree/Digital Christmas Tree.html
@@ -34,8 +34,13 @@
             <a href="https://google.com" title ="Name of website" target="_blank">
              <img src="img/star-ornoment.png" alt="christmas-star" id="star1">  
             </a>
+
+            <a href="https://google.com" title ="Name of website" target="_blank">
+              <img src="img/purlple_ornoment-removebg-preview 1.png" alt="purple-orna" id="purple1">  
+             </a>
+
         <!-- </div> -->
-              <!--My is a hoe-->
+              
       </div>
         
       </div>
