Update Digital Christmas Tree.html

--- a/Digital Christmas Tree/Digital Christmas Tree.html
+++ b/Digital Christmas Tree/Digital Christmas Tree.html
@@ -29,12 +29,18 @@
         <img src="img/red-presents.png" alt="presents" id="red-present">
         <img src="img/white-presents.png" alt="presents" id="white-present"> 
 
-        <!-- <div class="add-links"> -->
-          <img src="img/angle3-removebg-preview.png" alt="presents" id="angel-top">
-            <a href="https://google.com" title ="Name of website" target="_blank">
-             <img src="img/star-ornoment.png" alt="christmas-star" id="star1">  
-            </a>
+         <!-- Linked Ornoments -->
 
+        <!--Angel Ornoment-->
+        <a href="https://www.seattlearchdiocese.org/Stewardship/ACA/Donate.aspx"
+        title="Annual Catholic Appeal" target="_blank">
+          <img src="img/angleimg.png" alt="image of angle" id="angel-top">
+        </a>
+
+        <!--First Red Star Ornoment-->
+        <a href="https://www.seattlearchdiocese.org/NWC/subscribe.aspx" title ="Nothwest Catholic Campaign" target="_blank">
+          <img src="img/star-ornoment.png" alt="christmas-star" id="star1">  
+        </a>
             <a href="https://google.com" title ="Name of website" target="_blank">
               <img src="img/purlple_ornoment-removebg-preview 1.png" alt="purple-orna" id="purple1">  
              </a>
