Update Digital Christmas Tree.html

--- a/Digital Christmas Tree/Digital Christmas Tree.html
+++ b/Digital Christmas Tree/Digital Christmas Tree.html
@@ -31,16 +31,32 @@
 
          <!-- Linked Ornoments -->
 
-        <!--Angel Ornoment-->
+        <!--Angel Ornament-->
         <a href="https://www.seattlearchdiocese.org/Stewardship/ACA/Donate.aspx"
         title="Annual Catholic Appeal" target="_blank">
-          <img src="img/angleimg.png" alt="image of angle" id="angel-top">
+          <img src="img/angle.png" alt="image of angle" id="angel-top">
         </a>
 
-        <!--First Red Star Ornoment-->
+        <!--First Red Star Ornament-->
         <a href="https://www.seattlearchdiocese.org/NWC/subscribe.aspx" title ="Nothwest Catholic Campaign" target="_blank">
-          <img src="img/star-ornoment.png" alt="christmas-star" id="star1">  
+          <img src="img/star-ornament.png" alt="christmas-star" id="star">  
         </a>
+
+        <!-- Third Red Star Ornament -->
+        <a href="https://donate.seattlearchdiocese.org/ricebowl" title ="CRS Rice Bowl" target="_blank">
+          <img src="img/star-ornaments_2.png" alt="christmas-star" id="star2">  
+        </a>
+
+        <!-- Baby Jesus Ornament -->
+        <a href="https://donate.seattlearchdiocese.org/crs-collection" title ="Catholic Relief Services Collection" target="_blank">
+          <img src="img/babyJesus.png" alt="christmas-star" id="baby">  
+        </a>
+        
+        <!-- Red Striped Ornament -->
+        <a href="https://myfranciscan.org/donation-page-general-donation/" title ="Holy Land Good Friday" target="_blank">
+          <img src="img/red_stripe_ornament.png" alt="purple-orna" id="stripe_ornament">  
+         </a> 
+ 
             <a href="https://google.com" title ="Name of website" target="_blank">
               <img src="img/purlple_ornoment-removebg-preview 1.png" alt="purple-orna" id="purple1">  
              </a>
