Update Digital Christmas Tree.html

--- a/Digital Christmas Tree/Digital Christmas Tree.html
+++ b/Digital Christmas Tree/Digital Christmas Tree.html
@@ -34,7 +34,7 @@
         <!--Angel Ornament-->
         <a href="https://www.seattlearchdiocese.org/Stewardship/ACA/Donate.aspx"
         title="Annual Catholic Appeal" target="_blank">
-          <img src="img/angle.png" alt="image of angle" id="angel-top">
+          <img src="img/angel.png" alt="image of angle" id="angel-top">
         </a>
 
         <!--First Red Star Ornament-->
