Match names of pics and on css

--- a/Digital Christmas Tree/Digital Christmas Tree.html
+++ b/Digital Christmas Tree/Digital Christmas Tree.html
@@ -39,7 +39,7 @@
 
         <!--First Red Star Ornament-->
         <a href="https://www.seattlearchdiocese.org/NWC/subscribe.aspx" title ="Nothwest Catholic Campaign" target="_blank">
-          <img src="img/star-ornament.png" alt="christmas-star" id="star">  
+          <img src="img/star-ornament.png" alt="christmas-star" id="star1">  
         </a>
 
         <!-- Third Red Star Ornament -->
@@ -56,10 +56,6 @@
         <a href="https://myfranciscan.org/donation-page-general-donation/" title ="Holy Land Good Friday" target="_blank">
           <img src="img/red_stripe_ornament.png" alt="purple-orna" id="stripe_ornament">  
          </a> 
- 
-            <a href="https://google.com" title ="Name of website" target="_blank">
-              <img src="img/purlple_ornoment-removebg-preview 1.png" alt="purple-orna" id="purple1">  
-             </a>
 
         <!--First Purple Ornament from the top-->
         <a href="https://donate.seattlearchdiocese.org/peters-pence" 
