Add links, add 2 more ornaments, fix layout

--- a/Digital Christmas Tree/Digital Christmas Tree.html
+++ b/Digital Christmas Tree/Digital Christmas Tree.html
@@ -42,14 +42,19 @@
           <img src="img/star-ornament.png" alt="christmas-star" id="star1">  
         </a>
 
-        <!-- Third Red Star Ornament -->
+        <!--Second Red star Ornament from the top-->
+        <a href="https://donate.seattlearchdiocese.org/bimcollection" title ="Catholic Home Missions" target="_blank">
+          <img src="img/star-ornament_1.png" alt="christmas-star" id="star2">  
+        </a>
+
+        <!-- Third Red Star Ornament from the top -->
         <a href="https://donate.seattlearchdiocese.org/ricebowl" title ="CRS Rice Bowl" target="_blank">
-          <img src="img/star-ornaments_2.png" alt="christmas-star" id="star2">  
+          <img src="img/star-ornament_2.png" alt="christmas-star" id="star3">  
         </a>
 
         <!-- Baby Jesus Ornament -->
         <a href="https://donate.seattlearchdiocese.org/crs-collection" title ="Catholic Relief Services Collection" target="_blank">
-          <img src="img/babyJesus.png" alt="christmas-star" id="baby">  
+          <img src="img/baby jesus.png" alt="christmas-star" id="baby">  
         </a>
         
         <!-- Red Striped Ornament -->
@@ -65,7 +70,7 @@
 
         <!--Gold Ornament on 2nd row from the top -->
         <a href="https://donate.seattlearchdiocese.org/cchd-collection" 
-          title ="Catholic Campaign for Human Development Collection" target="_blank">
+          title ="Catholic Campaign for Human Development" target="_blank">
           <img src="img/gold_ornament.png" alt="gold-ornament" id="gold1">  
         </a>   
 
@@ -85,6 +90,11 @@
         <a href="#" title ="" target="_blank">
           <img src="img/purple_ornament.png" alt="purple-ornament" id="purple2">  
         </a>
+
+        <!--Matt Gold Ornament -->
+        <a href="#" title ="" target="_blank">
+          <img src="img/matte_gold_ornament.png" alt="matte_gold_ornament" id="matt-gold">  
+        </a> 
       </div>
         
     </div>
