Update Digital Christmas Tree.html

--- a/Digital Christmas Tree/Digital Christmas Tree.html
+++ b/Digital Christmas Tree/Digital Christmas Tree.html
@@ -38,12 +38,14 @@
         </a>
 
         <!--First Red Star Ornament-->
-        <a href="https://www.seattlearchdiocese.org/NWC/subscribe.aspx" title ="Nothwest Catholic Campaign" target="_blank">
+        <a href="https://www.seattlearchdiocese.org/NWC/subscribe.aspx" 
+          title ="Nothwest Catholic Campaign" target="_blank">
           <img src="img/star-ornament.png" alt="christmas-star" id="star1">  
         </a>
 
         <!--Second Red star Ornament from the top-->
-        <a href="https://donate.seattlearchdiocese.org/bimcollection" title ="Catholic Home Missions" target="_blank">
+        <a href="https://donate.seattlearchdiocese.org/bimcollection" 
+          title ="Catholic Home Missions" target="_blank">
           <img src="img/star-ornament_1.png" alt="christmas-star" id="star2">  
         </a>
 
@@ -53,12 +55,14 @@
         </a>
 
         <!-- Baby Jesus Ornament -->
-        <a href="https://donate.seattlearchdiocese.org/crs-collection" title ="Catholic Relief Services Collection" target="_blank">
+        <a href="https://donate.seattlearchdiocese.org/crs-collection" 
+          title ="Catholic Relief Services Collection" target="_blank">
           <img src="img/baby jesus.png" alt="christmas-star" id="baby">  
         </a>
         
         <!-- Red Striped Ornament -->
-        <a href="https://myfranciscan.org/donation-page-general-donation/" title ="Holy Land Good Friday" target="_blank">
+        <a href="https://myfranciscan.org/donation-page-general-donation/" 
+          title ="Holy Land Good Friday" target="_blank">
           <img src="img/red_stripe_ornament.png" alt="purple-orna" id="stripe_ornament">  
          </a> 
 
